Modifiche progetto, aggiornamento documentazione